--- a/app/globals.css
+++ b/app/globals.css
@@ -2,16 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-.custom-scrollbar::-webkit-scrollbar {
-    width: 4px;
+::-webkit-scrollbar {
+    width: 6px;
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #fff;
-    border-radius: 10px;
+
+::-webkit-scrollbar-track {
+    background: #a1a0a0;
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background-color: #fff;
+::-webkit-scrollbar-thumb {
+    background: #7e72fd;
+    border-radius: 5px;
 }
-
